2-send-message-across-service-bus/3-prepare-ingress/distributed-tracing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distributed-tracing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /sender(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: distributed-tracing-sender
            port:
              number: 80
